# flame-xafs

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/flame/: __init__.py  __main__.py  gui.py  hdfdata.py
tests/data/: 202605281158-Zn_foil-Zn_foil_calibration_Si111-mono-xafs_scan-87a641f3.h5  Zn_foil_87a641f3_transmission.txt
